# serde_taml

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
src/: de.rs  lib.rs
src/de/: enum_access.rs  key_deserializer.rs  list_access.rs  mod.rs  struct_access.rs  struct_or_map_access.rs  type_overrides.rs
tests/: data_literals.rs  decoded.rs  deserializer.rs  reporting.rs  scientific.rs
