[package]
name = "serde_taml"
version = "0.0.0-dev"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
publish = false

[dependencies]
indexmap = "1.5.1"
lazy_static = { version = "1.4.0", optional = true }
linkme = { version = "0.2.2", optional = true }
logos = "0.11.4"
serde = { version = "1.0.115", default-features = false }
serde-object = { path = "../serde-object", optional = true }
taml = { path = "../taml" }
woc = { path = "../woc" }
wyz = "0.2.0"

[dev-dependencies]
cast = "0.2.3"
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"
educe = "0.4.13"
indexmap = { version = "1.5.1", features = ["serde-1"] }

[features]
serde-object-assist = ["lazy_static", "linkme", "serde-object/assistant-extra"]
