[package]
name = "serde_taml"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Serde-integration for TAML, a kind-to-humans configuration language"
license = "MPL-2.0"
repository = "https://github.com/Tamschi/serde_taml"
include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]
indexmap = "1.5.1"
lazy_static = { version = "1.4.0", optional = true }
linkme = { version = "0.2.2", optional = true }
logos = "0.11.4"
serde = { version = "1.0.115", default-features = false }
serde-object = { version = "0.0.0-alpha.0", optional = true }
taml = "0.0.1"
cervine = "0.0.2"
wyz = "0.2.0"

[dev-dependencies]
cast = "0.2.3"
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"
educe = "0.4.13"
indexmap = { version = "1.5.1", features = ["serde-1"] }

[features]
serde-object-assist = ["lazy_static", "linkme", "serde-object/assistant-extra"]
