[package]
name = "serde_taml"
version = "0.0.3"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Serde-integration for TAML, a kind-to-humans configuration language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/serde_taml"
homepage = "https://github.com/Tamschi/serde_taml/tree/v0.0.3"
documentation = "https://docs.rs/serde_taml/0.0.3"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/serde_taml" }
is-it-maintained-open-issues = { repository = "Tamschi/serde_taml" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
serde-object-assist = ["lazy_static", "linkme", "serde-object/assistant-extra"] #TODO: Document this.

[dependencies]
cervine = "0.0.6"
debugless-unwrap = "0.0.4"
either = "1.6.1"
indexmap = "1.5.1"
joinery = "2.1.0"
lazy_static = { version = "1.4.0", optional = true }
linkme = { version = "0.3.2", optional = true }
logos = "0.12.0"
paste = "1.0.5"
scientific = { version = "0.1.2", features = ["serde"] }
serde = { version = "1.0.130" }
serde-object = { version = "0.0.0-alpha.0", optional = true } # public
taml = "0.0.11" # public
tap = "1.0.1"
try_match = "0.2.2"

[dev-dependencies]
cargo-husky = "1.5.0"
cast = "0.3.0"
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"
doc-comment = "0.3.3"
educe = "0.4.13"
git_info = "0.1.2"
indexmap = { version = "1.5.1", features = ["serde-1"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.5"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
